# vpin

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WIP_GLTF_EXPORT.md  basic.ini  basic.vpx  wasm-readme.md
.cargo/: config.toml
.github/workflows/: clippy.yml  integration.yml  publish-wasm.yml  release-plz.yml  rust.yml
examples/: basic.vbs  create_basic_vpx_file.rs  create_incandescent_light.rs  export_table_glb.rs  export_table_obj.rs  extract_with_glb.rs  find_tables_with.rs  find_tables_with_decals.rs
pkg/: package.json
src/: filesystem.rs  gltf.rs  lib.rs  wasm.rs  wavefront_obj_io.rs
src/directb2s/: mod.rs
src/pov/: mod.rs
src/vpx/: biff.rs  collection.rs  color.rs  compat.rs  custominfotags.rs  expanded.rs  font.rs  gamedata.rs  gameitem.rs  gltf.rs  image.rs  json.rs  jsonmodel.rs  lzw.rs  lzw_reader.rs  lzw_writer.rs  material.rs  math.rs  mod.rs  model.rs  obj.rs  renderprobe.rs  sound.rs  tableinfo.rs  units.rs  utf16.rs  version.rs  wav.rs
src/vpx/expanded/: camera.rs  flashers.rs  flippers.rs  fonts.rs  gameitems.rs  gltf_export.rs  images.rs  materials.rs  mesh_common.rs  mesh_validation.rs  metadata.rs  mod.rs  primitives.rs  ramps.rs  rubbers.rs  sounds.rs  util.rs  walls.rs
src/vpx/expanded/balls/: mod.rs
src/vpx/expanded/bumpers/: bumper_base_mesh.rs  bumper_ring_mesh.rs  bumper_socket_mesh.rs  mod.rs
src/vpx/expanded/decals/: mod.rs
src/vpx/expanded/flippers/: flipper_base_mesh.rs  mod.rs
src/vpx/expanded/gates/: gate_bracket_mesh.rs  gate_long_plate_mesh.rs  gate_plate_mesh.rs  gate_wire_mesh.rs  gate_wire_rectangle_mesh.rs  mod.rs
src/vpx/expanded/hittargets/: drop_target_t2_mesh.rs  drop_target_t3_mesh.rs  drop_target_t4_mesh.rs  hit_target_fat_rectangle_mesh.rs  hit_target_fat_square_mesh.rs  hit_target_rectangle_mesh.rs  hit_target_round_mesh.rs  hit_target_t1_slim_mesh.rs  hit_target_t2_slim_mesh.rs  mod.rs
src/vpx/expanded/kickers/: kicker_cup_mesh.rs  kicker_gottlieb_mesh.rs  kicker_hole_mesh.rs  kicker_plate_mesh.rs  kicker_simple_hole_mesh.rs  kicker_t1_mesh.rs  kicker_williams_mesh.rs  mod.rs
src/vpx/expanded/lights/: bulb_light_mesh.rs  bulb_socket_mesh.rs  mod.rs
src/vpx/expanded/plungers/: mod.rs
src/vpx/expanded/spinners/: mod.rs
src/vpx/expanded/triggers/: mod.rs  trigger_button_mesh.rs  trigger_inder_mesh.rs  trigger_simple_mesh.rs  trigger_star_mesh.rs
src/vpx/export/: gltf_export.rs  mod.rs  obj_export.rs
src/vpx/gameitem/: ball.rs  bumper.rs  collection.rs  decal.rs  dragpoint.rs  flasher.rs  flipper.rs  font.rs  gate.rs  generic.rs  hittarget.rs  kicker.rs  light.rs  lightcenter.rs  lightsequencer.rs  partgroup.rs  plunger.rs  primitive.rs  ramp.rs  ramp_image_alignment.rs  reel.rs  rubber.rs  select.rs  spinner.rs  table.rs  textbox.rs  timer.rs  trigger.rs  vertex2d.rs  vertex3d.rs  vertex4d.rs  wall.rs
src/vpx/math/: matrix.rs  mod.rs  quantize.rs  vec.rs
src/vpx/mesh/: builtin_primitive.rs  flashers.rs  mesh_validation.rs  mod.rs  playfields.rs  ramps.rs  rubbers.rs  walls.rs
src/vpx/mesh/balls/: ball_mesh.rs  mod.rs
src/vpx/mesh/bumpers/: bumper_cap_mesh.rs  bumper_ring_mesh.rs  bumper_socket_mesh.rs  mod.rs
src/vpx/mesh/decals/: mod.rs
src/vpx/mesh/flippers/: mod.rs
src/vpx/mesh/gates/: gate_bracket_mesh.rs  gate_long_plate_mesh.rs  gate_wire_rectangle_mesh.rs  mod.rs
src/vpx/mesh/hittargets/: drop_target_t2_mesh.rs  hit_target_fat_rectangle_mesh.rs  hit_target_rectangle_mesh.rs  hit_target_round_mesh.rs  mod.rs
src/vpx/mesh/kickers/: kicker_cup_mesh.rs  kicker_hole_mesh.rs  kicker_plate_mesh.rs  kicker_simple_hole_mesh.rs  mod.rs
src/vpx/mesh/lights/: bulb_socket_mesh.rs  mod.rs
src/vpx/mesh/plungers/: mod.rs
src/vpx/mesh/spinners/: mod.rs  spinner_bracket_mesh.rs  spinner_plate_mesh.rs
src/vpx/mesh/triggers/: mod.rs  trigger_wire_d_mesh.rs
testdata/: Police Force (Williams 1989) FULL DMD.stripped.directb2s  blender_square.mtl  vpinball_screw.mtl  wrongly_labeled_png.hdr
tests/: directb2s_read_all.rs  directb2s_read_write_compare_all.rs  expanded.rs  strip.rs  vpx_read_extract_assemble_write_compare_all.rs  vpx_read_write_compare_all.rs
tests/common/: mod.rs  tracing_duration_filter.rs
