[package]
name = "vpin"
version = "0.20.2"
edition = "2024"
description = "Rust library for the virtual pinball ecosystem"
repository = "https://github.com/francisdb/vpin"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/vpin"

keywords = ["vpin", "visual-pinball", "virtual-pinball", "vpx"]
categories = ["game-engines", "game-development"]

exclude = [
    "testdata/*",
]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.0"
cfb = "0.12.1"
encoding_rs = "0.8.35"
md2 = "0.10.2"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
utf16string = "0.2.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde_repr = "0.1.20"
hex = "0.4.3"
flate2 = "1.1.5"
image = "0.25.8"
weezl = "0.1.12"
regex = "1.12.2"
sanitize-filename = "0.6"
log = "0.4"
itoa = "1.0.15"
ryu = "1.0.20"
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
dirs = "6.0.0"
pretty_assertions = "1.4.1"
rand = "0.9.2"
testdir = "0.9.3"
walkdir = "2.5.0"
roxmltree = "0.21.1"
testresult = "0.4.1"
fake = { version = "4.4.0", features = ["derive"] }

[profile.test]
# level 0 is very slow for writing to compound files
# see https://github.com/mdsteele/rust-cfb/issues/42
opt-level = 1
