[package]
name = "vpin"
version = "0.23.1"
edition = "2024"
description = "Rust library for working with Visual Pinball VPX files"
repository = "https://github.com/francisdb/vpin"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/vpin"

keywords = ["vpin", "visual-pinball", "virtual-pinball", "vpx"]
categories = ["game-engines", "game-development"]

[package.metadata.docs.rs]
all-features = true

exclude = [
    "testdata/*",
]

[features]
default = ["parallel"]
parallel = ["rayon"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.0"
cfb = "0.14.0"
encoding_rs = { version = "0.8.35" }
md2 = "0.10.2"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
hex = "0.4.3"
weezl = "0.1.12"
regex = "1.12.2"
sanitize-filename = "0.6"
log = "0.4"
tracing = "0.1"
itoa = "1.0.15"
rayon = { version = "1.11.0", optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
js-sys = { version = "0.3.85", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Use zlib-ng for much faster compression/decompression on native targets
flate2 = { version = "1.1.8", features = ["zlib-rs"], default-features = false }
image = { version = "0.25.9", default-features = false, features = [
    "bmp", "exr", "gif", "hdr", "jpeg", "png", "tga", "webp", "rayon"
] }

[target.'cfg(target_family = "wasm")'.dependencies]
# Use pure Rust miniz_oxide backend for wasm compatibility
flate2 = { version = "1.1.8", default-features = true }
image = { version = "0.25.9", default-features = false, features = [
    "bmp", "exr", "gif", "hdr", "jpeg", "png", "tga", "webp"
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
dirs = "6.0.0"
pretty_assertions = "1.4.1"
rand = { version = "0.9.2" }
walkdir = "2.5.0"
testresult = "0.4.1"
fake = { version = "4.4.0", features = ["derive"] }
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
testdir = "0.9.3"
[target.'cfg(target_family = "wasm")'.dev-dependencies]
# TODO keep this in sync with wasm-bindgen version above
wasm-bindgen-test = "0.3.58"
# In fact an indirect dependency of rand, but we need to specify the wasm_js feature here
getrandom = { version = "0.3.2", features = ["wasm_js"] }

[profile.test]
# level 0 is very slow for writing to compound files
# see https://github.com/mdsteele/rust-cfb/issues/42
opt-level = 1
